--- a/css/components/_com-card-parts.scss
+++ b/css/components/_com-card-parts.scss
@@ -2,4 +2,8 @@
     font-size:$font-24;
     text-transform: uppercase;
     font-family: $font-titles;
+
+    &.--small {
+        font-size:$font-18;
+    }
 }
