--- a/views/tours/nuevo-tour.html
+++ b/views/tours/nuevo-tour.html
@@ -156,22 +156,69 @@
             <!-- TOOLBAR -->
 
             <!-- MAIN CONTENT -->
-            <section class="col-12">
-
-                <div class="mod-card">
-                    <h4 class="com-card-title">Añadir Nuevo Tour</h4>
-
-                    <form class="mod-form">
+            <section class="col-6">
+                <h1 class="com-page-title">Añadir Nuevo Tour</h1>
+                <section class="row col-12">
+                    <div class="mod-card">
+                        <h4 class="com-card-title --small">Información del Tour</h4>
+                        <form class="mod-form">
                             <fieldset>
-                                <label class="com-label"> Nombre del Adicional</label>
+                                <label class="com-label"> Nombre</label>
                                 <input type="text" class="com-input --text">
                             </fieldset>
                             <fieldset>
-                                <label class="com-label"> Valor del adicional</label>
+                                <label class="com-label"> Valor</label>
                                 <input type="number" class="com-input --number">
                             </fieldset>
+                            <fieldset>
+                                <label class="com-label"> Descripción del Tour</label>
+                                <textarea class="com-textarea"> </textarea>
+                            </fieldset>
+                            <fieldset>
+                                <label class="com-label"> Adicionales</label>
+                                <select name="select" multiple="multiple" class="com-input --select">
+
+                                    <option value="">7 Horas</option>
+                                    <option value="">1-20 Personas</option>
+                                    <option value="" selected>Almuerzo Incluído</option>
+                                    <option value="">No se suspende por lluvia</option>
+                                </select>
+                            </fieldset>
                         </form>
-                </div>
+                    </div>
+                </section>
+
+                <section class="col-6">
+                        <h1 class="com-page-title">Añadir Imágenes</h1>
+                        <section class="row col-12">
+                            <div class="mod-card">
+                                <h4 class="com-card-title --small">Información del Tour</h4>
+                                <form class="mod-form">
+                                    <fieldset>
+                                        <label class="com-label"> Nombre</label>
+                                        <input type="text" class="com-input --text">
+                                    </fieldset>
+                                    <fieldset>
+                                        <label class="com-label"> Valor</label>
+                                        <input type="number" class="com-input --number">
+                                    </fieldset>
+                                    <fieldset>
+                                        <label class="com-label"> Descripción del Tour</label>
+                                        <textarea class="com-textarea"> </textarea>
+                                    </fieldset>
+                                    <fieldset>
+                                        <label class="com-label"> Adicionales</label>
+                                        <select name="select" multiple="multiple" class="com-input --select">
+        
+                                            <option value="">7 Horas</option>
+                                            <option value="">1-20 Personas</option>
+                                            <option value="" selected>Almuerzo Incluído</option>
+                                            <option value="">No se suspende por lluvia</option>
+                                        </select>
+                                    </fieldset>
+                                </form>
+                            </div>
+                        </section>                
 
             </section>
             <!-- MAIN CONTENT -->
